減少view的邏輯故新增WebHelper來判斷收支類型，Child Action直接把值帶入helper即可取得類型

--- a/MyAccounts/MyAccounts/Views/Accounts/ChildContent.cshtml
+++ b/MyAccounts/MyAccounts/Views/Accounts/ChildContent.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<MyAccounts.Models.AccountsModels>
+@using MyAccounts.Data;
 @{
     Layout = null;
 }
@@ -26,7 +27,7 @@
                     @item.ID
                 </td>
                 <td>
-                    @(item.AccountTypes == "1" ? "支出" : "收入")
+                    @WebHelper.GetAccountType(item.AccountTypes)
                 </td>
                 <td>
                     @item.AccountDate.ToString("yyyy/MM/dd")
