Index頁移除Partial View，僅呈現Child Action並調整內容

--- a/MyAccounts/MyAccounts/Views/Accounts/Index.cshtml
+++ b/MyAccounts/MyAccounts/Views/Accounts/Index.cshtml
@@ -55,10 +55,10 @@
 </div>
 
 <div class="row">
-    <div class="col-md-12">
+    @*<div class="col-md-12">
         這是Partial View<br />
         @Html.Partial("_AccountsPartial", Model)
-    </div>
+    </div>*@
 
     <div class="col-md-12">
         這是Child Action<br />
