--- a/MyAccounts/MyAccounts/Views/Accounts/ChildContent.cshtml
+++ b/MyAccounts/MyAccounts/Views/Accounts/ChildContent.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<MyAccounts.Models.AccountsModels>
-@using MyAccounts.Data;
 @{
     Layout = null;
 }
@@ -27,7 +26,7 @@
                     @item.ID
                 </td>
                 <td>
-                    @WebHelper.GetAccountType(item.AccountTypes)
+                    @RazorHelper.GetAccountTypes(item.AccountTypes)
                 </td>
                 <td>
                     @item.AccountDate.ToString("yyyy/MM/dd")
