--- a/MyAccounts/MyAccounts/Views/Accounts/Index.cshtml
+++ b/MyAccounts/MyAccounts/Views/Accounts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyAccounts.Models.AccountBook
+﻿@model MyAccounts.Models.ViewModels.AccountsViewModels
 @{
     ViewBag.Title = "我的記帳本";
 }
@@ -21,31 +21,31 @@
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Categoryyy, htmlAttributes: new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.AccountBook.Categoryyy, htmlAttributes: new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.DropDownListFor(model => model.Categoryyy, (IEnumerable<SelectListItem>)ViewBag.DDLCategory, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Categoryyy, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.AccountBook.Categoryyy, (IEnumerable<SelectListItem>)ViewBag.DDLCategory, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.AccountBook.Categoryyy, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Amounttt, htmlAttributes: new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.AccountBook.Amounttt, htmlAttributes: new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.EditorFor(model => model.Amounttt, new { htmlAttributes = new { @class = "form-control", placeholder = "金額" } })
-                @Html.ValidationMessageFor(model => model.Amounttt, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.AccountBook.Amounttt, new { htmlAttributes = new { @class = "form-control", placeholder = "金額" } })
+                @Html.ValidationMessageFor(model => model.AccountBook.Amounttt, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Dateee, htmlAttributes: new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.AccountBook.Dateee, htmlAttributes: new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.EditorFor(model => model.Dateee, new { htmlAttributes = new { @class = "form-control datepicker", placeholder = "日期" } })
-                @Html.ValidationMessageFor(model => model.Dateee, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.AccountBook.Dateee, new { htmlAttributes = new { @class = "form-control datepicker", placeholder = "日期" } })
+                @Html.ValidationMessageFor(model => model.AccountBook.Dateee, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Remarkkk, htmlAttributes: new { @class = "col-sm-2 control-label" })
+            @Html.LabelFor(model => model.AccountBook.Remarkkk, htmlAttributes: new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                @Html.EditorFor(model => model.Remarkkk, new { htmlAttributes = new { @class = "form-control", placeholder = "備註" } })
-                @Html.ValidationMessageFor(model => model.Remarkkk, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.AccountBook.Remarkkk, new { htmlAttributes = new { @class = "form-control", placeholder = "備註" } })
+                @Html.ValidationMessageFor(model => model.AccountBook.Remarkkk, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -57,15 +57,9 @@
 </div>
 
 <div class="row">
-    @*<div class="col-md-12">
-            這是Partial View<br />
-            @Html.Partial("_AccountsPartial", Model)
-        </div>*@
-
     <div class="col-md-12">
-        這是Child Action<br />
         <div id="results">
-            @Html.Action("ChildContent")
+            @Html.Partial("_AccountsPartial", Model.AccountsModels)
         </div>
     </div>
 </div>
