--- a/MyAccounts/MyAccounts/Views/Shared/_Layout.cshtml
+++ b/MyAccounts/MyAccounts/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" />
     @RenderSection("styles", required: false)
 </head>
 <body>
@@ -18,13 +19,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("我的記帳本", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("我的記帳本", "Index", "Accounts", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("管理記帳本", "Index", "ManageAccounts", new { area = "Backend" }, null)</li>
                 </ul>
             </div>
         </div>
