--- a/MyAccounts/MyAccounts/Views/Shared/_Layout.cshtml
+++ b/MyAccounts/MyAccounts/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
                     <li>@Html.ActionLink("管理記帳本", "Index", "ManageAccounts", new { area = "Backend" }, null)</li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
