--- a/MyAccounts/MyAccounts/Views/Accounts/Index.cshtml
+++ b/MyAccounts/MyAccounts/Views/Accounts/Index.cshtml
@@ -20,6 +20,10 @@
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Page)
+        @Html.HiddenFor(model => model.Year)
+        @Html.HiddenFor(model => model.Month)
+
         <div class="form-group">
             @Html.LabelFor(model => model.AccountBook.Categoryyy, htmlAttributes: new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
